[gd_scene load_steps=3 format=3 uid="uid://7j1b55t8tafg"]

[ext_resource type="Script" path="res://scenes/game/cursor_magnet.gd" id="1_xk040"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6mkjn"]
radius = 16.0

[node name="CursorMagnet" type="Area2D"]
collision_layer = 64
collision_mask = 8
script = ExtResource("1_xk040")

[node name="Shape" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_6mkjn")
debug_color = Color(1, 1, 1, 0.67451)

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="dropped" from="." to="." method="_on_dropped"]
